update readme for CPU

--- a/IMDB_AttackDemo.ipynb
+++ b/IMDB_AttackDemo.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -427,14 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "most probable is  playing\n"
+      "most probable is  game\n"
      ]
     }
    ],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "This is a stupid movie. When I saw it in a movie theater more than half the audience left before it was half over. I stayed to the bitter end. To show fortitude? I caught it again on television and it was much funnier. Still by no means a classic, or even consistently hilarious but the family kinda grew on me. I love Jessica Lundy anyway. If you've nothing better to do and it's free on t.v. you could do worse.\n",
-      "\t\t 0  --  0.99021846\n",
+      "\t\t 0  --  0.9874699\n",
       "Finished genetic attack in 0 iterations\n",
       "this is a moronic movie when i saw it in a movie theater more than half the audience left before it was half over i stayed to the bitter end to show fortitude i caught it again on television and it was much funnier still by no means a classic or even consistently hilarious but the family kinda grew on me i love jessica anyway if you've nothing better to do and it's free on t v you could do worse\n"
      ]
